--- a/.github/workflows/djangocicd.yml
+++ b/.github/workflows/djangocicd.yml
@@ -11,13 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3              
+        uses: actions/checkout@v3
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'             
+          python-version: '3.10'
       - name: Install dependencies
         run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
